tests/fail/match_range_invalid_excl.tk
fn main() -> i32 {
    auto x = 5
    match x {
        5 ..< 5 => {
            return 1
        }
        default => {
            return 0
        }
    }
}
